# test_ctls

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
blockchain_test/: manage.py
blockchain_test/blockchain_app/: asgi.py  settings.py  urls.py  wsgi.py
blockchain_test/blockchain_app/setting_coins/: __init__.py  karbo.py  polygon.py  tron.py  usdt_polygon.py  utils.py
blockchain_test/coins/: admin.py  interface.py  models.py  serializers.py  urls.py  views.py
blockchain_test/coins/karbo/: client.py
blockchain_test/coins/migrations/: 0001_initial.py  0002_coin_color_coin.py  0003_alter_coin_color_coin.py
blockchain_test/coins/polygon/: client.py
blockchain_test/coins/static/coins/: style.css
blockchain_test/coins/templates/coins/: base.html  coin_detail.html  index.html
blockchain_test/coins/tron/: client.py
blockchain_test/coins/usdt_polygon/: client.py
blockchain_test/services/: urls.py  views.py
configs/: karbo.yaml  polygon.yaml  tron.yaml  usdt_polygon.yaml
