[tool.poetry]
name = "test-ctls"
version = "0.1.0"
description = ""
authors = ["Alex_Goryachev <alexey.i.goryachev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
pyyaml = "^6.0.2"
tronpy = "^0.5.0"
asgiref = "^3.8.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
